[metadata]
name = git-stacktrace
author = Joe Gordon
license = Apache License (2.0)
classifier =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
summary = git-blame for stacktraces
home-page = https://github.com/pinterest/git-stacktrace

description-file =
    README.rst
    CHANGES.rst

[files]
packages =
    git_stacktrace

[entry_points]
console_scripts =
    git-stacktrace = git_stacktrace.cmd:main
